tests/ui/generics/issue-79605.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for implementations
  --> $DIR/issue-79605.rs:3:12
   |
LL | impl X<'_, _> {}
   |            ^ not allowed in type signatures
   |
help: use type parameters instead
   |
LL | impl<T> X<'_, T> {}
   |     +++       ~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0121`.
